# kdo

./: Cargo.toml  README.md  todo.txt
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs  selection_list.rs
crates/kdo/: Cargo.toml
crates/kdo/src/: main.rs
crates/todo_txt/: Cargo.toml
crates/todo_txt/src/: lib.rs  parse.rs  task.rs  tasks.rs
crates/ui/: Cargo.toml
crates/ui/src/: draw.rs  lib.rs  state.rs  terminal.rs
crates/vdo/: Cargo.toml
crates/vdo/src/: main.rs
data/: large_todo.txt  maketodo.py  medium_todo.txt  vhs.tape
