
[workspace] 
resolver = "2"
members = ["crates/*"]

[workspace.package]
rust-version = "1.70"
edition = "2021"
license = "MIT"
authors = ["r. keith <keithroe@gmail.com>"]


[workspace.dependencies]
app = { path = "./crates/app", version = "0.0.0" }
todo_txt= { path = "./crates/todo_txt", version = "0.0.0" }
ui = { path = "./crates/ui", version = "0.0.0" }
#vdo = { path = "./crates/vdo", version = "0.0.0" }


[profile.release]
incremental = true
debug = true
lto = "fat"
