[package]
name = "vdo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
todo_txt = { path = "../todo_txt" }
app = {path = "../app/"}
ui = {path = "../ui/"}
